--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "current-project",
+  "name": "jwt-authentication",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "authServer.js",
   "scripts": {
-    "devStart": "nodemon server.js",
-    "devStartAuth": "nodemon authServer.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/WebDevSimplified/JWT-Authentication.git"
+  },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "dotenv": "^8.1.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1"
+  "bugs": {
+    "url": "https://github.com/WebDevSimplified/JWT-Authentication/issues"
   },
-  "devDependencies": {
-    "nodemon": "^1.19.2"
+  "homepage": "https://github.com/WebDevSimplified/JWT-Authentication#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "nodemon": "^2.0.22"
   }
 }
